# logics

./: logics.cabal
src/Control/Monad/: Clause.hs  Fresh.hs  Set.hs  Supply.hs
src/Data/: Unifiable.hs
src/Logic/: Herbrand.hs  Interp.hs  UnionFind.hs
