name: logics
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE
maintainer: kylcarte@gmail.com
author: Kyle Carter

library
    exposed-modules:
        Control.Monad.Fresh
        Control.Monad.Clause
        Logic.Herbrand
        Control.Monad.Set
        Logic.Interp
        Logic.UnionFind
    build-depends:
        base >=4.8 && <4.9,
        bifunctors -any,
        containers -any,
        logict -any,
        free -any,
        transformers -any,
        type-combinators -any,
        mtl -any,
        equivalence -any
    default-language: Haskell2010
    hs-source-dirs: src

