name: logics
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE
maintainer: kylcarte@gmail.com
author: Kyle Carter

library
    exposed-modules:
        Data.Fix
        Logic.Herbrand
        Control.Monad.Supply
        Control.Monad.Clause
        Control.Monad.Set
        Data.Unifiable
        Logic.Interp
        Logic.UnionFind
    build-depends:
        base >=4.8 && <4.9,
        bifunctors -any,
        containers -any,
        lens -any,
        logict -any,
        free -any,
        transformers -any,
        type-combinators -any,
        mtl -any,
        equivalence -any
    default-language: Haskell2010
    hs-source-dirs: src

